--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
       "angular-ui-router" : "0.2.18",
       "angular-resource" : "v1.5.3",
       "angular-ui-bootstrap" : "1.3.2",
-      "bootstrap" : "v3.3.6"
+      "bootstrap" : "v3.3.6",
+      "angular-toastr" : "latest"
     }
   }
 }
