--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "kamut-backend",
   "version": "1.0.0",
   "dependencies": {
-    "bower": "~1.2"
+    "bower": "1.3.3"
   },
   "engine": {
-    "node": "0.10.x",
-    "npm": "1.3.x"
+    "node": "0.10.21",
+    "npm": "3.1.0"
   },
   "scripts": {
     "postinstall": "./node_modules/bower/bin/bower install"
