--- a/bower.json
+++ b/bower.json
@@ -8,9 +8,9 @@
     "name": "bower-rails generated vendor assets",
     "dependencies": {
       "angular": "v1.5.3",
-      "angular-ui-router" : "latest",
+      "angular-ui-router" : "0.2.18",
       "angular-resource" : "v1.5.3",
-      "angular-ui-bootstrap" : "latest",
+      "angular-ui-bootstrap" : "1.3.2",
       "bootstrap" : "v3.3.6"
     }
   }
