--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "kamut-backend",
   "version": "1.0.0",
   "dependencies": {
-    "bower": "~1.2"
+    "bower": "1.3.8"
   },
-  "engine": {
-    "node": "0.10.x",
+  "engines": {
+    "node": "0.12.4",
     "npm": "1.3.x"
   },
   "scripts": {
